--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
             formattedDate;
           // Loop over all elements in single player's last_viewed array
           for (var j = 0; j < lastViewedLength; j++) {
+            formattedDate = lastViewedAra[j].date;
             formattedDate = moment(formattedDate).format('DD MMM YY');
             var myLI = '<li> Count: ' + lastViewedAra[j].count + ' Date: ' + formattedDate + '</li>';
             myUL += myLI;
